Optimizing integ tests for less model upload calls (#683)
* Optimizing tests for less model upload calls

Signed-off-by: Martin Gaievski <gaievski@amazon.com>